2014-06-09  Carl Hetherington  <cth@carlh.net>

	* Fix server/client with non-RGB24 sources.

	* Version 1.69.25 released.

2014-06-09  Carl Hetherington  <cth@carlh.net>

	* Make audio gain a floating-point value in the UI (#367).

	* Work-around out-of-memory crashes with large start trims (#252).

	* Version 1.69.24 released.

2014-06-06  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.23 released.

2014-06-05  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.22 released.

2014-06-05  Carl Hetherington  <cth@carlh.net>

	* Large speed-up to multi-image source file decoding.

	* Back-port changes from v2 which work out how separate
	audio files should be resampled by looking at the video
	files which are present at the same time.

2014-06-03  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.21 released.

2014-06-03  Carl Hetherington  <cth@carlh.net>

	* Fix bad resampling of separate sound file sources that
	have specified video frame rates.

	* Version 1.69.20 released.

2014-06-03  Carl Hetherington  <cth@carlh.net>

	* Re-calculate and update audio plots when the mapping is changed.

	* Change the -3dB preset to -6dB since we are talking about
	amplitude, not power.

	* Version 1.69.19 released.

2014-06-02  Carl Hetherington  <cth@carlh.net>

	* Empirical hack to prevent over-read of array
	by libswscale; may fix crashes at the start of
	DCP encodes.

2014-05-29  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.18 released.

2014-05-28  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.17 released.

2014-05-28  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.16 released.

2014-05-28  Carl Hetherington  <cth@carlh.net>

	* Rework KDM generation to be about CPLs rather than DCPs,
	and allow specification of any CPL to generate KDMs for.

	Requested-by: Richard Turner

2014-05-27  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.15 released.

2014-05-26  Carl Hetherington  <cth@carlh.net>

	* Version 1.69.14 released.
